@@ -3,7 +3,7 @@
 /*
  * LMS version 1.11-git
  *
- *  (C) Copyright 2001-2016 LMS Developers
+ *  (C) Copyright 2001-2020 LMS Developers
  *
  *  Please, see the doc/AUTHORS for more information about authors!
  *
@@ -39,14 +39,14 @@ class LMSTcpdfDebitNote extends LMSTcpdfInvoice
 
     public function note_date()
     {
-        $this->backend->SetFont(self::TCPDF_FONT, '', 10);
-        $this->backend->writeHTMLCell(0, 0, '', 20, trans('Draw-up date:') . ' <b>' . date("d.m.Y", $this->data['cdate']) . '</b>', 0, 1, 0, true, 'R');
+        $this->backend->SetFont(self::TCPDF_FONT, '', 8);
+        $this->backend->writeHTMLCell(0, 0, '', 10, trans('Draw-up date:') . ' <b>' . date("d.m.Y", $this->data['cdate']) . '</b>', 0, 1, 0, true, 'R');
         $this->backend->writeHTMLCell(0, 0, '', '', trans('Deadline:') . ' <b>' . date("d.m.Y", $this->data['pdate']) . '</b>', 0, 1, 0, true, 'R');
     }
 
     public function note_title()
     {
-        $this->backend->SetY(35);
+        $this->backend->SetY(29);
         $this->backend->SetFont(self::TCPDF_FONT, 'B', 16);
         $docnumber = docnumber(array(
             'number' => $this->data['number'],
@@ -61,7 +61,7 @@ class LMSTcpdfDebitNote extends LMSTcpdfInvoice
 
     public function note_drawer()
     {
-        $this->backend->SetFont(self::TCPDF_FONT, '', 10);
+        $this->backend->SetFont(self::TCPDF_FONT, '', 8);
         $drawer = '<b>' . trans('Note drawer:') . '</b><br>';
         $tmp = $this->data['division_header'];
 
@@ -96,6 +96,35 @@ class LMSTcpdfDebitNote extends LMSTcpdfInvoice
         $this->backend->writeHTMLCell(80, '', '', 45, $drawer, 0, 1, 0, true, 'L');
     }
 
+    public function shipping_address()
+    {
+        if (ConfigHelper::checkValue(ConfigHelper::getConfig('invoices.post_address', true))) {
+            $shipaddress = '';
+            if ($this->data['post_name'] || $this->data['post_address']) {
+                $lines = document_address(array(
+                    'name' => $this->data['post_name'] ? $this->data['post_name'] : $this->data['name'],
+                    'address' => $this->data['post_address'],
+                    'street' => $this->data['post_street'],
+                    'zip' => $this->data['post_zip'],
+                    'postoffice' => $this->data['post_postoffice'],
+                    'city' => $this->data['post_city'],
+                ));
+                $shipaddress .= implode('<br>', $lines);
+            } else {
+                $shipaddress .= $this->data['name'] . '<br>';
+                $shipaddress .= $this->data['address'] . '<br>';
+                $shipaddress .= $this->data['zip'] . ' ' . $this->data['city'] . '<br>';
+            }
+
+            if ($this->data['division_countryid'] && $this->data['post_countryid'] && $this->data['division_countryid'] != $this->data['post_countryid']) {
+                $shipaddress .= ', ' . trans($this->data['post_country']) . '<br>';
+            }
+        }
+
+        $this->backend->SetFont(self::TCPDF_FONT, 'B', 10);
+        $this->backend->writeHTMLCell(80, '', 125, 50, $shipaddress, 0, 1, 0, true, 'L');
+    }
+
     public function note_recipient()
     {
         $oldy = $this->backend->GetY();
@@ -111,15 +140,9 @@ class LMSTcpdfDebitNote extends LMSTcpdfInvoice
             $recipient .= trans('SSN') . ': ' . $this->data['ssn'];
         }
         $this->backend->SetFont(self::TCPDF_FONT, '', 10);
-        $this->backend->writeHTMLCell(80, '', 120, 50, $recipient, 0, 1, 0, true, 'L');
+        $this->backend->writeHTMLCell(80, '', 15, 80.5, $recipient, 0, 1, 0, true, 'L');
 
         $y = $this->backend->GetY();
-
-        if (ConfigHelper::checkValue(ConfigHelper::getConfig('invoices.customer_bankaccount', true))) {
-            $bankaccount = trans('Bank account:') .' <b>' . format_bankaccount(bankaccount($this->data['customerid'], $this->data['account'])) . '</b>';
-            $this->backend->SetFont(self::TCPDF_FONT, 'B', 8);
-            $this->backend->writeHTMLCell('', '', 120, '', $bankaccount, 0, 1, 0, true, 'L');
-        }
 
         if (ConfigHelper::checkValue(ConfigHelper::getConfig('invoices.customer_credentials', true))) {
             $pin = '<b>' . trans('Customer ID: $a', sprintf('%04d', $this->data['customerid'])) . '</b><br>';
@@ -135,7 +158,7 @@ class LMSTcpdfDebitNote extends LMSTcpdfInvoice
     public function note_data()
     {
         /* print table */
-        $this->backend->Ln(20);
+        $this->backend->Ln(4.2);
         $this->backend->writeHTMLCell('', '', '', '', '', 0, 1, 0, true, 'L');
 
         $this->backend->SetFillColor(200, 200, 200);
@@ -243,18 +266,45 @@ class LMSTcpdfDebitNote extends LMSTcpdfInvoice
         $this->backend->writeHTMLCell(0, 6, '', '', trans('In words:') . ' ' . moneyf_in_words($this->data['value'], $this->data['currency']), 0, 1, 0, true, 'R');
     }
 
+    public function signature()
+    {
+        $this->backend->Ln(45);
+        $this->backend->SetFont(self::TCPDF_FONT, '', 9);
+
+        $y = $this->backend->GetY();
+        $this->backend->SetY($y);
+
+        $dottedLine = array('width' => 0.2, 'dash' => '1,1,1,1', 'phase' => 0, 'color' => array(0, 0, 0));
+        $this->backend->Line(125, $y, 195, $y, $dottedLine);
+        $this->backend->writeHTMLCell(70, '', 125, '', trans('issuer\'s signature'), 0, 1, 0, true, 'C');
+    }
+
+    public function note_header_image()
+    {
+        $image_path = ConfigHelper::getConfig('invoices.header_image', '', true);
+        if (!file_exists($image_path)) {
+            return;
+        }
+        $this->backend->writeHTMLCell(40, 0, 12, 8, '<img src="' . $image_path . '">');
+    }
+
     public function Draw($note)
     {
         $this->data = $note;
 
+        $this->note_header_image();
         $this->invoice_no_accountant();
         $this->note_date();
         $this->invoice_expositor();
         $this->note_title();
         $this->note_drawer();
+        $this->shipping_address();
         $this->note_recipient();
         $this->note_data();
         $this->invoice_to_pay();
+        if (ConfigHelper::checkConfig('notes.issuer_signature')) {
+            $this->signature();
+        }
         $this->invoice_footnote();
         $docnumber = docnumber(array(
             'number' => $this->data['number'],
